--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <img src="image/logo_auberge.png" alt="logo">
       </div>
       <ul class="nav-links">
-        <a href="index.html">Accueil</a> |
-        <a href="menu.html">Menu</a> |
-        <a href="contact.html">Accès/Contact</a>
+        <a href="/index.html">Accueil</a> |
+        <a href="/menu.html">Menu</a> |
+        <a href="/contact.html">Accès/Contact</a>
       </ul>
     </nav>
 
